# etl-b3

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Makefile  README.md  alembic.ini  compose.override.yaml  compose.yaml  docker-compose.yml  pyproject.toml
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_schema_v2.py  0003_fact_cotahist_daily.py  0004_scraper_run_audit.py
app/: main.py
app/api/: assets.py  etl_router.py  health.py  quotes.py
app/api/routes/: __init__.py  assets.py  cotahist.py  etl.py  fact_quotes.py  health.py  market.py  quotes.py  trades.py
app/core/: config.py  constants.py  logging.py  market_data_constants.py
app/db/: __init__.py  engine.py  models.py
app/etl/: __init__.py
app/etl/ingestion/: __init__.py  autodiscover.py  base.py  local_adapter.py  remote_adapter.py  ticker_filter.py  ticker_reader.py
app/etl/loaders/: __init__.py  db_loader.py
app/etl/orchestration/: __init__.py  cotahist_adaptive_strategy.py  cotahist_historical_planning.py  csv_resolver.py  flow.py  market_hours.py  pipeline.py
app/etl/parsers/: __init__.py  column_mapping.py  cotahist_layout.py  cotahist_parser.py  instruments_parser.py  jsonl_quotes_parser.py  trades_parser.py
app/etl/transforms/: __init__.py  b3_transforms.py  cotahist_transforms.py
app/etl/validation/: __init__.py  b3_locale_numbers.py  scraping_output_validator.py
app/integrations/b3/: __init__.py  client.py  (+6 more)
app/repositories/: __init__.py  asset_repository.py  cotahist_quote_repository.py  cotahist_read_repository.py  etl_run_repository.py  fact_quote_repository.py  market_repository.py  quote_repository.py  scraper_run_audit_repository.py  trade_repository.py
app/schemas/: __init__.py
app/scraping/: __init__.py
docker/: cotahist_worker.py  entrypoint.sh  entrypoint_cotahist.sh  run_daily_batch.sh  scheduler.py
docker/initdb/: 01_timescaledb.sql
docs/: architecture.md  data-dictionary.md
scripts/: run_b3_cotahist_annual.py  run_b3_quote_batch.py  run_b3_scraper.py  run_b3_scraper_negocios.py  run_diario_oficial.py  run_etl.py  run_prefect_daily_flow.py  run_tests.ps1
tests/: conftest.py  test_api.py  test_asset_repository.py  test_b3_quote_integration.py  test_cli_entrypoints.py  test_column_mapping.py  test_csv_resolver.py  test_daily_quotes_load.py  test_db_loader.py  test_downloader.py  test_engine.py  test_etl_run_repository.py  test_instruments_parser.py  test_jsonl_quotes.py  test_jsonl_quotes_parser.py  test_load_integration.py  test_local_adapter.py  test_pipeline.py  test_run_daily_batch.py  test_scheduler.py  test_ticker_filter.py  test_trades_parser.py  test_transforms.py
tests/e2e/: test_api_blackbox.py
tests/fixtures/: CadInstrumento_2024-06-14.csv  cadastro_instrumentos_filter_test.csv  negocios_consolidados_filter_test.csv  polars_builders.py
tests/integration/: test_api.py  test_b3_quotes.py  test_cli_entrypoints.py  test_cotahist_adaptive_strategy_orchestration.py  test_cotahist_db.py  test_cotahist_historical_db.py  test_cotahist_historical_pipeline_tip.py  test_cotahist_worker.py  test_db_smoke.py  test_market_data_repositories_db.py  test_prefect_startup_contract.py  test_run_daily_batch.py  test_scheduler.py  test_scraper_cookie_banner_wiring.py  test_scraping_output_validation_locale.py
tests/unit/: test_adaptive_wait.py  test_asset_detail_use_case.py  test_asset_sanitize.py  test_b3_cotahist_settings.py  test_b3_csv_read.py  test_b3_locale_numbers.py  test_candles_bucket.py  test_column_mapping.py  test_cookie_banner.py  test_cotahist_adaptive_size_policy.py  test_cotahist_annual_adaptive_wiring.py  test_cotahist_downloader.py  test_cotahist_historical_orchestration.py  test_cotahist_historical_planning.py  test_cotahist_ingestion_stats.py  test_cotahist_standard_fast_path_policy.py  test_cotahist_strategy_selection.py  test_cotahist_transforms.py  test_csv_resolver.py  test_full_stack_bootstrap.py  test_handoff_tasks.py  test_indicators_math.py  test_market_hours.py  test_prefect_audit_tasks.py  test_prefect_bootstrap.py  test_prefect_daily_scraping_flow.py  test_prefect_schedules.py  test_prefect_serve_lightweight_contract.py  test_prefect_serve_registration.py  test_scraping_output_validator.py  test_ticker_filter.py  test_transforms.py
(+36 files in other folders)
