[project]
name = "etl-b3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.133.0",
    "httpx>=0.27.0",
    "perfect>=0.0.1",
    "playwright>=1.44.0",
    "polars>=1.38.1",
    "prefect>=3.6.19",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "respx>=0.22.0",
    "scalar-fastapi>=1.6.2",
    "sqlalchemy>=2.0.47",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
# Development and test dependencies used in CI and by developers
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-playwright>=0.5.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.setuptools]
# opção simples: listar pacotes explicitamente
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: black-box tests against a running stack (E2E_BASE_URL) or browser (deselect with -m 'not e2e')",
    "live: tests that make real network requests to external sites",
    "integration: multi-component tests (optional marker for filtering)",
    "db: requires a reachable PostgreSQL (DATABASE_URL); skipped on connection failure",
]

[tool.coverage.run]
# Entrypoint-focused: app, scripts/legacy_scheduler, docker helpers
source = ["app", "docker", "scripts"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]
show_missing = true
# Optional: fail_under = 60  # enable in CI when targeting a minimum

[tool.playwright]
# Default browser for pytest-playwright
browser = "chromium"

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]

[tool.ty.environment]
python-version = "3.13"
# Let ty infer project layout; explicit root = ["app"] breaks `from app.*` resolution

[tool.ty.src]
# Type-check application and scripts; tests rely on dynamic imports — exclude for a stable gate
include = ["app", "scripts", "docker"]
